--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Página de estudos de HTML</title> <!-- Adicionando um título -->
     </head>
     <body>
+        <h1> Imagem teste!</h1>
         <img src="/imagens/imagem-html.png" alt="Imagem teste HTML">
     </body>
 </html>
