--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1> Imagem teste!</h1>
-        <img src="imagens/imagem-html.png" alt="Imagem teste HTML">
+        <img src="/imagens/imagem-html.png" alt="Imagem teste HTML">
     </body>
 </html>
 
